<resources>
    <string name="app_name">SaksiGO</string>

    <string name="title">SaksiGO</string>
    <string name="logo">SaksiGO</string>
    <string name="SAKSIGO">SAKSIGO</string>
    <string name="loading">Loading...</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sodales nulla sit amet dapibus mollis. Cras eget orci sollicitudin, ullamcorper sem at, porta urna. In eu sapien odio. Fusce et pulvinar metus.</string>
    <string name="Continue">Continue</string>
    <string name="Welcome">Welcome!</string>
    <string name="Registered">Already Registered?</string>
    <string name="AccountNot">Don\'t Have an Account?</string>
    <string name="Login">LOGIN</string>
    <string name="Register">REGISTER</string>
    <string name="hintEmail">email</string>
    <string name="hint_full_name">full name</string>
    <string name="hint_re_type_password">re-type password</string>
    <string name="hint_password">password</string>
    <string name="hint_phone_number">phone number</string>
    <string name="checkbox_i_agree_with_terms_of_use">I Agree with the Terms of Use</string>
    <string name="checkbox_i_agree_with_privacy_policy">I Agree with the Privacy Policy</string>
    <string name="checkbox_send_me_news_and_promotions_on_email">Send me news and promotions via email</string>
    <string name="verification">VERIFICATION</string>
    <string name="verification_desc">We have sent you a verification link to the registered email address. Please check your email.</string>
    <string name="verification_code">verification code</string>
    <string name="verify">OK</string>
    <string name="see_here">See Here</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_desc">Please enter your email below, we will send you a link to reset your password.</string>

    <!--    How to register-->
    <string name="Registration">Registration</string>
    <string name="Validation">Validation</string>
    <string name="Cases_Page">Cases Page</string>
    <string name="Registration_desc">Key partners at SaksiGO need to register their firm and their law case specialty, to allow the customer to see their intricate trades.</string>
    <string name="Validation_desc">After successful registration, the validation process will begin on our side immediately. Verified accounts may access all of SaksiGO’s features.</string>
    <string name="Cases_desc">Before key partners can start helping their clients on the platform, they are needed to set their cases first. Our robust communication and management system will allow key partners to help their clients efficiently.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profession_registration">Profession Registration</string>
    <string name="describe_the_services_that_you_could_provide_as_a_legal_advocate_and_your_background_as_a_legal_advocate">Describe the services that you could provide as a Legal Advocate, and your background as a Legal Advocate... (50 characters minimum)</string>
    <string name="youtube_google_drive_vimeo_etc_link">Provide a video link e.g. YouTube..</string>
    <string name="confirm">Confirm</string>

</resources>